# AI_PengTungChun

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  app.py  local_start_terminal.bat  plan1.txt  pyproject.toml  test_imports.py  test_structure.py
claude/: __init__.py  client.py
core/: __init__.py  cli_strings.py  manager.py  models.py  prompts.py
gui/: __init__.py  main_window.py
