[tool.poetry]
name = "bugfix"
version = "0.1.0"
description = "AI-powered Bug Fix service"
authors = ["AIMate"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.115,<1.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = ">=13,<15.1"
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.29"
openai = "^1.14"
elevenlabs = "^2.7.1"
aiohttp = "^3.9"
httpx = ">=0.28.1,<1.0.0"
httpcore = ">=1.0.5,<2.0"
python-dotenv = "^1.0"
pydantic = "^2.5"
python-multipart = "^0.0.9"
pydub = "^0.25"
ffmpeg-python = "^0.2"
boto3 = "^1.34"
pydantic-settings = "^2.10.1"
websocket-client = "^1.8.0"
colorlog = "^6.9.0"
psycopg2-binary = "^2.9.10"
pydantic-ai = "^1.0.10"
apscheduler = "^3.11.0"
rich = "^14.1.0"
openinference-instrumentation-pydantic-ai = "^0.1.5"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
opentelemetry-api = "^1.37.0"
arize-otel = "^0.10.0"
pandas = "^2.3.2"
numpy = "^2.3.3"
scipy = "^1.16.2"
xlsxwriter = "^3.2.9"
openpyxl = "^3.1.5"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
