[tool.poetry]
name = "claude-debugger"
version = "0.1.0"
description = "Windows GUI that manages Claude Code debugging tasks"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.8"
anyio = "^4.4"
rich = "^13.8"
pyside6 = "^6.6"

[tool.poetry.scripts]
claude-debugger = "app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
